# harness

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py
app/agent/: extract.py  fetch.py  loop.py  skills.py  tools.py
app/agent/skills/: deep-research.md  web-search-researcher.md
app/api/: api_keys.py  auth.py  deps.py  mailer.py  passwords.py  quota.py  ratelimit.py
app/api/routes/: admin.py  auth.py  chat.py  conversations.py  health.py  me.py  search.py  shared.py  usage.py
app/llm/: anthropic_provider.py  base.py  openai_provider.py  registry.py
app/search/: base.py  brave.py  duckduckgo.py  google.py  perplexity.py  registry.py  searxng.py  serper.py  tavily.py
app/storage/: __init__.py  base.py  settings_store.py  sqlite_store.py  usage_store.py  user_store.py
deploy/: .dockerignore  Dockerfile  docker-compose.yml
deploy/searxng/: settings.yml
tests/: conftest.py  test_admin.py  test_agent_loop.py  test_api.py  test_auth.py  test_chat.py  test_conversations.py  test_extract.py  test_me.py  test_password_reset.py  test_passwords.py  test_providers.py  test_quota.py  test_search_registry.py  test_security.py  test_usage.py  test_users_store.py
web/: app.js  index.html  style.css
