[project]
name = "ai-agent-harness"
version = "0.1.0"
description = "Multi-provider AI agent harness with pluggable web search and an external REST API + chat UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "sse-starlette>=2.1",
    "anthropic>=0.40",
    "openai>=1.40",
    "ddgs>=6.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.api.routes", "app.llm", "app.agent", "app.search", "app.storage"]

[tool.setuptools.package-data]
"app.agent" = ["skills/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
